2003-09-10  Gray Watson  <gray@outside.256.com>

	* Added quick checks for the constructor attribute.

2003-09-09  Gray Watson  <gray@outside.256.com>

	* Removed find_slot function in chunk.c since it was only used
	once.

2003-09-08  Gray Watson  <gray@outside.256.com>

	* Changed the configure script to define the HAVE_... include
	defines to 0 or 1.  Thanks to Brian Schreder.

	* Removed usage of environ (duh) from dmalloc_argv.c.  Thanks to
	Brian Schreder.

	* Added better dmalloc.h processing.

2003-09-08  Gray Watson  <gray@outside.256.com>

	* Releasing dmalloc version 5.2.2.

	* Added a Cygwin section to the manual.

	* Added GETENV_SAFE testing for Cygwin environments.

	* Added a new ERROR_NOT_START_BLOCK (30) errno for addresses which
	are within an allocation but not pointing to the start of the
	block.

	* Worked a bit more on the function pnt checking code after some
	more feedback from Richard Colley.

2003-09-06  Gray Watson  <gray@outside.256.com>

	* Improved the pnt checking code to properly check free space
	below and above an allocation.  Added regression tests for this.

2003-09-05  Gray Watson  <gray@outside.256.com>

	* Fixed possible lock leak in the shutdown code.  Thanks to TJ
	Saunders.

	* Fixed bug in function pnt checking code.  Not sure when this
	broke.  Thanks to Philippe Roger.

2003-08-04  Gray Watson  <gray@outside.256.com>

	* Removed references to dmalloc leap.

2003-07-23  Gray Watson  <gray@outside.256.com>

	* Changed the installing of libraries to install-data. 

2003-07-08  Gray Watson  <gray@outside.256.com>

	* Releasing version 5.2.1.

2003-06-20  Gray Watson  <gray@outside.256.com>

	* Fixed problems with macro arguments not in () thanks to Paul
	Hurtley.

2003-06-18  Gray Watson  <gray@outside.256.com>

	* Fixed a problem with strdup not returning char *.  Thanks to Dan
	Nelson, Juhani Rautiainen, and Paul Hurtley.

2003-06-10  Gray Watson  <gray@outside.256.com>

	* Releasing version 5.2.0.
